# The_Consult_AI

./: Dockerfile  README.md  docker-entrypoint.sh  docker-shell.sh  pyproject.toml  pytest.ini  setup.cfg
docs/: model_finetuning.md
src/datapipeline/: .dockerignore  .gitignore  Dockerfile  README.md  chromadb_backups_pubmed_abstract_with_semantic.jsonl.dvc  docker-shell.sh  extract_pm_ftp.py  get_pm_ftp.py  parse_pm_ftp.py  pubmed_abstract-20251114-054433.jsonl.dvc  pyproject.toml
src/datapipeline/.dvc/: config
src/datapipeline/data/: .gitignore  pubmed_data_00001.parquet.dvc
src/datapipeline/tests/unit/: __init__.py
src/deployment/: Dockerfile  docker-entrypoint.sh  docker-shell.sh  docker_config.json  pyproject.toml
src/deployment/deploy_images/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  dev-backup.json
src/deployment/deploy_kubes/: Pulumi.yaml  __main__.py  create_cluster.py  create_network.py  setup_containers.py  setup_loadbalancer.py  setup_loadbalancer_ssl.py
src/frontend/: .dockerignore  Dockerfile  README.md  docker-shell.sh  index.html  package-lock.json  tailwind.config.ts
src/frontend/src/: index.css
src/frontend/src/components/: AIAnswerSection.tsx  FilterSidebar.tsx  ModeToggle.tsx  SearchBar.tsx  StudyCard.tsx
src/frontend/src/hooks/: useGeminiAsk.ts
src/frontend/src/pages/: Index.tsx
src/frontend/src/types/: study.ts
src/llm-api/: .dockerignore  Dockerfile  README.md  __init__.py  docker-shell.sh  pyproject.toml
src/llm-api/api/: __init__.py  prompt.py  rag_module.py  server.py
src/llm-api/tests/unit/: test_llm_utils.py
src/llm-finetuning/: README.md  env.dev
src/llm-finetuning/autotrain-runner/: README.md  gcp-pull.py  gcp-push.py
src/llm-finetuning/dataset-creator/: Dockerfile  cli.py  docker-entrypoint.sh  docker-shell.sh
src/llm-finetuning/dataset-creator/data/: medical_qa_0.txt  medical_qa_1.txt  (+500 more)
src/llm-finetuning/gemini-finetuner/: cli.py  docker-shell.sh  pyproject.toml
src/models/: .dockerignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  docker-shell.sh  jsonl_to_chromadb.py  parquet_to_chromadb.py  pyproject.toml  query_rag_model.py  semantic_splitter.py
src/models/src/: chunker.py  embedder.py  gcs.py
src/models/tests/: conftest.py  test_conftest.py
src/models/tests/unit/: test_jsonl_to_chromadb.py  test_parquet_to_chromadb.py  test_semantic_splitter.py  test_utils.py
src/models/trf/: chroma.tfvars  main.tf
src/workflow/: .gitignore  Dockerfile  cli.py  data_collector.yaml  data_processor.yaml  docker-entrypoint.sh  docker-shell.sh  model.py  model_deploy.yaml  model_training.yaml  pipeline.yaml  pyproject.toml
tests/integration/: draft_api_endpoints_integration.py  test_rag_pipeline_integration.py
tests/system/: test_system_api.py
